--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,6 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -60,8 +59,16 @@ table {
   height: 100%;
 }
 
-.leftBlock {
-  width: 283px;
-  height: 1615px;
-  background: #FFFF;
+body {
+  display: flex;
+}
+
+@font-face {
+  font-family: SegoeUI;
+  src:
+          local("Segoe UI"),
+          url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
+          url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
+          url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype");
+  font-weight: 400;
 }
