--- a/src/index.pug
+++ b/src/index.pug
@@ -23,6 +23,18 @@ html(lang="en")
           li
             a(href="/") FREEBIES
       .about About Us
-      .aboutText Gluten de neuter planeta, acquirere mensa!
-    .background
-    .padding
+      .aboutText Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa!Gluten de neuter planeta, acquirere mensa!Gluten de neuter planeta, acquirere mensa!Gluten de neuter planeta, acquirere mensa!Gluten de neuter planeta, acquirere mensa!
+      .tagsContainer
+        .tagsLogo
+          img(src="/pics/tags.png" alt="tags")
+          .tagsText Tags
+      .tagsButtons
+        button() Video
+        button() Video
+        button() Video
+        button() Video
+        button() Video
+        button() Video
+        button() Video
+        button() Video
+        button() Video
