--- a/src/index.pug
+++ b/src/index.pug
@@ -1,47 +1,14 @@
-doctype html
+include leftblock
+include maincolumn
 
-// -
-//  var n = 0;
+doctype html
 
 html(lang="en")
   head
     link(rel="stylesheet" href="/index.scss")
-    link(rel="stylesheet" href="/leftblock.scss")
-    link(rel="stylesheet" href="/maincolumn.scss")
     link(href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet")
     meta(charset="UTF-8")
   body
     .padding
-    .leftBlock
-      img(src="/pics/logo.png" alt="logo" class="logoImage")
-      .buttons
-        ul
-          li
-            a(href="/") HOME
-          li
-            a(href="/") VIDEOS
-          li
-            a(href="/") IMAGES
-          li
-            a(href="/") ARTICLES
-          li
-            a(href="/") FREEBIES
-      .about About Us
-      .aboutText Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa!
-      .tagsContainer
-        .tagsLogo
-          img(src="/pics/tags.png" alt="tags")
-          .tagsText Tags
-      .tagsButtons
-        //while n < 9
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-        button() Video
-    .background
-      .topPadding
+    +leftBlock
+    +mainColumn
