--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -1,8 +1,10 @@
 @import 'index.scss';
 
-.background {
+.feed {
   //border: 1px solid #800;
   background: #e8e8e8;
+  padding-top: 30px;
+  padding-left: 23px;
   width: 718px;
   height: 1605px;
 }
