--- a/src/leftblock.scss
+++ b/src/leftblock.scss
@@ -86,6 +86,8 @@
 
 .tagsButtons button {
   padding: 0;
-  margin:5px;
+  font-size: 12px;
+  margin-right: 5px;
+  margin-bottom: 10px;
   color: #7e7d7e;
 }
