--- a/src/leftblock.pug
+++ b/src/leftblock.pug
@@ -6,15 +6,15 @@ mixin leftBlock()
     .buttons
       ul
         li
-          a(href="/") HOME
+          a(href="#") HOME
         li
-          a(href="/") VIDEOS
+          a(href="#") VIDEOS
         li
-          a(href="/") IMAGES
+          a(href="#") IMAGES
         li
-          a(href="/") ARTICLES
+          a(href="#") ARTICLES
         li
-          a(href="/") FREEBIES
+          a(href="#") FREEBIES
     .about About Us
     .aboutText Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa!
     .tagsContainer
