--- a/src/maincolumn.pug
+++ b/src/maincolumn.pug
@@ -4,5 +4,7 @@ mixin mainColumn()
   .mainColumn
     .topPadding
     .feed
-      img(src="/pics/videoicon.png" alt="videoicon")
-
+      .topElement
+        img(src="/pics/videoicon.png" alt="videoicon")
+        .boldTopText Featured
+        .topText Videos
