--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,7 @@ html(lang="en")
   head
     link(rel="stylesheet" href="/index.scss")
     link(href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet")
     meta(charset="UTF-8")
   body
     .padding
