--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,8 @@ body {
   display: flex;
 }
 
+$textColor: #7e7d7e;
+
 @font-face {
   font-family: SegoeUI;
   src: local("Segoe UI"),
@@ -65,3 +67,4 @@ body {
   url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype");
   font-weight: 400;
 }
+
