--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -5,7 +5,7 @@
   background: #e8e8e8;
   padding-top: 30px;
   padding-left: 23px;
-  width: 718px;
+  width: 696px;
   height: 1605px;
 }
 
@@ -13,4 +13,27 @@
   background: #6dbad6;
   width: 100%;
   padding-top: 7px;
+}
+
+.topElement {
+  width: 100%;
+  padding-bottom: 49px;
+  padding-left: 50px;
+  display: flex;
+}
+
+.boldTopText {
+  padding-top: 5px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 10px;
+  font-size: 33px;
+  margin-right: 5px;
+  color: $textColor
+}
+
+.topText {
+  padding-top: 5px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 33px;
+  color: $textColor
 }
