--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -1,12 +1,14 @@
 @import 'index.scss';
 
 .feed {
-  //border: 1px solid #800;
   background: #e8e8e8;
   padding-top: 30px;
   padding-left: 23px;
-  width: 696px;
-  height: 1605px;
+  padding-right: 29px;
+  width: 667px;
+  height: 1615px;
+  display: flex;
+  flex-direction: column;
 }
 
 .topPadding {
@@ -15,17 +17,55 @@
   padding-top: 7px;
 }
 
-.topElement {
+.topElements {
   width: 100%;
-  padding-bottom: 49px;
+  padding-bottom: 40px;
   padding-left: 50px;
   display: flex;
+}
+
+.videoIcon {
+  width: 46px;
+  height: 40px;
+}
+
+.label {
+  display: flex;
+}
+
+.shareButtons {
+  padding-top: 3px;
+  width: 337px;
+  height: 35px;
+  flex-direction: row;
+  justify-content: right;
+  display: flex;
+}
+
+.shareButtonLeft {
+  width: 45px;
+  height: 35px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.shareButton {
+  width: 45px;
+  height: 35px;
+  border-radius: 0;
+}
+
+.shareButtonRight {
+  width: 45px;
+  height: 35px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .boldTopText {
   padding-top: 5px;
   font-family: 'Open Sans', sans-serif;
-  margin-left: 10px;
+  margin-left: 17px;
   font-size: 33px;
   margin-right: 5px;
   color: $textColor
@@ -36,4 +76,23 @@
   font-family: 'PT Sans', sans-serif;
   font-size: 33px;
   color: $textColor
+}
+
+.video {
+  width: 100%;
+  height: 323px;
+}
+
+.shareLabel {
+  background: #d9d9d9;
+  color: $textColor;
+  font-family: 'PT Sans', sans-serif;
+  padding-top: 5px;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: row;
+  alignment: center;
+  margin-top: 8px;
+  width: 98.6%;
+  height: 22px;
 }
