change view buttons

--- a/src/maincolumn.pug
+++ b/src/maincolumn.pug
@@ -16,3 +16,7 @@ mixin mainColumn()
           button(class = "shareButtonRight")
       video(src = "" controls class = "video" alt = "Your browser does not support the video tag.")
       .shareLabel Audax, castus axonas inciviliter attrahendam de teres, fatalis clinias.
+      .changeView
+        .changeViewText Change view :
+        button(class = "changeViewButtonsLeft")
+        button(class = "changeViewButtonsRight")
