--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -6,7 +6,7 @@
   padding-left: 23px;
   padding-right: 29px;
   width: 667px;
-  height: 1615px;
+  height: 1567px;
   display: flex;
   flex-direction: column;
 }
@@ -95,4 +95,32 @@
   margin-top: 8px;
   width: 98.6%;
   height: 22px;
+}
+
+.changeView {
+  display: flex;
+  justify-content: right;
+  padding-top: 35px;
+  padding-right: 20px;
+}
+
+.changeViewText {
+  margin-top: 8px;
+  color: $textColor;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.changeViewButtonsLeft {
+  margin-left: 12px;
+  height: 35px;
+  width: 40px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.changeViewButtonsRight {
+  height: 35px;
+  width: 40px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
