--- a/src/index.scss
+++ b/src/index.scss
@@ -76,3 +76,7 @@ $textColor: #7e7d7e;
   font-weight: 400;
 }
 
+@font-face {
+  font-family: Sofia Pro Light;
+  src: url("/fonts/Sofia Pro Light.ttf");
+}
