--- a/src/maincolumn.pug
+++ b/src/maincolumn.pug
@@ -22,4 +22,7 @@ mixin mainColumn()
         .changeViewText Change view :
         button(class = "changeViewButtonsLeft")
         button(class = "changeViewButtonsRight")
-      +contetBloc()
+      +contentBloc()
+      +contentBloc()
+      +contentBloc()
+      +contentBloc()
