--- a/src/contentbloc.pug
+++ b/src/contentbloc.pug
@@ -1,10 +1,14 @@
 link(rel="stylesheet" href="/contentBloc.scss")
 
-mixin contetBloc()
-    .contentBloc
-        .mainRectangle
-            .image
-            .description
-                .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
-                .line
-                .bottomText Fortis lunas ducunt ad genetrix.
+mixin contentBloc()
+  .contentBloc
+    .mainRectangle
+      .videoCircle
+      .image
+      .description
+        .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
+        .line Share
+        .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
+        button(class = "rightBottomButton") ⮕
+
+
