--- a/src/contentBloc.scss
+++ b/src/contentBloc.scss
@@ -65,6 +65,11 @@
   position: absolute;
   height: 60px;
   width: 60px;
-  border-radius: 50px;
+  border-radius: 30px;
   background: #6cb9d4;
+  text-align:center;
+}
+
+.videoCircle img {
+  margin-top: 11px;
 }
