--- a/src/contentbloc.pug
+++ b/src/contentbloc.pug
@@ -4,11 +4,10 @@ mixin contentBloc()
   .contentBloc
     .mainRectangle
       .videoCircle
+        img(src="/pics/insideCircle.png" alt="video icon")
       .image
       .description
         .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
         .line Share
         .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
         button(class = "rightBottomButton") ⮕
-
-
