--- a/src/index.scss
+++ b/src/index.scss
@@ -80,3 +80,8 @@ $textColor: #7e7d7e;
   font-family: Sofia Pro Light;
   src: url("/fonts/Sofia Pro Light.ttf");
 }
+
+button:hover {
+  background: #6cb9d4;
+  color: #FFFFFF;
+}
