--- a/src/leftblock.pug
+++ b/src/leftblock.pug
@@ -6,15 +6,20 @@ mixin leftBlock()
     .buttons
       ul
         li
-          a(href="#") HOME
+          i(class = "fas fa-home")
+          a(href="#")  HOME
         li
-          a(href="#") VIDEOS
+          i(class = "fas fa-film")
+          a(href="#")  VIDEOS
         li
-          a(href="#") IMAGES
+          i(class = "fas fa-image")
+          a(href="#")  IMAGES
         li
-          a(href="#") ARTICLES
+          i(class = "fas fa-newspaper")
+          a(href="#")  ARTICLES
         li
-          a(href="#") FREEBIES
+          i(class = "fas fa-newspaper")
+          a(href="#")  FREEBIES
     .about About Us
     .aboutText Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa! Gluten de neuter planeta, acquirere mensa!
     .tagsContainer
