--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -136,3 +136,13 @@
 .shareButtons button {
   border: $textColor 1px solid;
 }
+
+.social-media-link a {
+  font-size: 20px;
+  color: grey;
+}
+
+.social-media-link a:hover {
+  color: white;
+  background: #6cb9d4;
+}
