--- a/src/contentblock.pug
+++ b/src/contentblock.pug
@@ -1,7 +1,7 @@
 link(rel="stylesheet" href="/contentBloc.scss")
 
-mixin contentBloc()
-  .contentBloc
+mixin contentBlock()
+  .contentBlock
     .mainRectangle
       .videoCircle
         img(src="/pics/insideCircle.png" alt="video icon")
@@ -10,4 +10,5 @@ mixin contentBloc()
         .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
         .line Share
         .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
-        button(class = "rightBottomButton") ⮕
+        button(class = "rightBottomButton")
+          i(class = "fas fa-arrow-right")
