--- a/src/maincolumn.pug
+++ b/src/maincolumn.pug
@@ -1,6 +1,6 @@
 link(rel="stylesheet" href="/maincolumn.scss")
 
-include contentbloc
+include contentblock
 
 mixin mainColumn()
   .mainColumn
@@ -28,10 +28,10 @@ mixin mainColumn()
           +social-media-link("fas fa-align-justify")
         button(class = "changeViewButtonsRight")
           +social-media-link("fas fa-th-large")
-      +contentBloc()
-      +contentBloc()
-      +contentBloc()
-      +contentBloc()
+      +contentBlock()
+      +contentBlock()
+      +contentBlock()
+      +contentBlock()
 
 
 mixin social-media-link(logo)
