--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -35,11 +35,11 @@
 
 .shareButtons {
   padding-top: 3px;
-  width: 337px;
-  height: 35px;
+  width: 320px;
   flex-direction: row;
-  justify-content: right;
-  display: flex;
+  // display: flex;
+  // justify-content: right;
+  text-align: right;
 }
 
 .shareButtonLeft {
@@ -47,10 +47,6 @@
   height: 35px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-}
-
-.fab fa-twitter {
-  color: #FFFFFF;
 }
 
 .shareButton {
