--- a/src/contentblock.pug
+++ b/src/contentblock.pug
@@ -5,7 +5,7 @@ mixin contentBlock()
     .mainRectangle
       .videoCircle
         img(src="/pics/insideCircle.png" alt="video icon")
-      .image
+      img(src = "/pics/preview.png" class = "image" alt= "Preview")
       .description
         .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
         .line Share
