--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -37,8 +37,6 @@
   padding-top: 3px;
   width: 320px;
   flex-direction: row;
-  // display: flex;
-  // justify-content: right;
   text-align: right;
 }
 
@@ -141,4 +139,19 @@
 .social-media-link a:hover {
   color: white;
   background: #6cb9d4;
+}
+
+.leftTh {
+  color: $textColor;
+}
+
+.rightTh {
+  color: #6cb9d4;
+  font-size: 15px;
+  text-align: right;
+  width: 29%;
+}
+
+.rightTh i {
+  margin-right: 10px;
 }
