--- a/src/contentBloc.scss
+++ b/src/contentBloc.scss
@@ -22,7 +22,7 @@
 
 .topTextDesc {
   font-family: Sofia Pro Light;
-  padding: 10px 13px 10px 16px;
+  padding: 8px 13px 10px 16px;
   font-size: 26px;
   line-height: 30px;
   width: 314px;
@@ -30,16 +30,24 @@
 }
 
 .line {
+  margin-top: 5px;
   margin-left: 18px;
   margin-right: 18px;
+  padding-top: 5px;
+  font-size: 10px;
+  color: $textColor;
   border-bottom: #7e7d7e 2px solid;
   height: 20px;
+}
+
+.line i {
+  margin-right: 20px;
 }
 
 .bottomTextDesc {
   font-family: Sofia Pro Light;
   color: $textColor;
-  padding: 15px 13px 10px 18px;
+  padding: 13px 13px 10px 18px;
   font-size: 13px;
   line-height: 20px;
   width: 310px;
@@ -50,8 +58,8 @@
   border: #FFFFFF;
   background: #dedede;
   position: absolute;
-  margin-left: 309px;
-  margin-top: -9px;
+  margin-left: 308px;
+  margin-top: -14px;
   height: 33px;
   width: 33px;
   border-top-left-radius: 33px;
