--- a/src/contentblock.pug
+++ b/src/contentblock.pug
@@ -8,7 +8,10 @@ mixin contentBlock()
       img(src = "/pics/preview.png" class = "image" alt= "Preview")
       .description
         .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
-        .line Share
+        .line
+          i(class = "fas fa-heart")   150
+          i(class = "fa fa-clone")  30
+          i(class = "fas fa-clock")  2days ago
         .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
         button(class = "rightBottomButton")
           i(class = "fas fa-arrow-right")
