--- a/src/footer.scss
+++ b/src/footer.scss
@@ -2,18 +2,35 @@
 
 footer {
   width: 100%;
-  height: 70px;
+  height: 73px;
   background: white;
-  display: flex;
 }
 
 .textFooter {
   font-family: 'Open Sans', sans-serif;
+  margin-top: 11px;
+  padding-left: 33px;
+  line-height: 20px;
+}
+
+.leftFooter {
   color: $textColor;
-  padding-top: 10px;
-  padding-left: 30px;
+  text-align: left;
 }
 
 .footerButtons {
-  justify-content: right;
+  padding-top: 10px;
+  width: 650px;
+  color: $textColor;
+  text-align: right;
+  font-size: 25px;
+}
+.footerButtons i {
+  margin-left: 20px;
+  background: $textColor;
+  border-radius: 50%;
+  height: 29px;
+  width: 29px;
+  text-align: center;
+  color: #FFFFFF;
 }
