--- a/src/footer.pug
+++ b/src/footer.pug
@@ -4,15 +4,13 @@ mixin pageFooter()
   .pageFooter
     footer()
       .textFooter
-        table(class="")
-          tr
-            th(class="leftFooter")
+            .leftFooter
               .designed The gallaria is designed By Css Author
               .links
                 a() Home |
                 a()  About Us |
                 a()  Contact Us
-            th(class = "footerButtons")
+            .footerButtons
               i(class = "fab fa-twitter")
               i(class ="fab fa-facebook-f")
               i(class ="fab fa-pinterest")
