--- a/src/contentblock.pug
+++ b/src/contentblock.pug
@@ -2,7 +2,7 @@ link(rel="stylesheet" href="/contentBloc.scss")
 
 mixin contentBlock()
   .contentBlock
-    .mainRectangle
+    div(class = "mainRectangle" id = "mainRectangle")
       .videoCircle
         img(src="/pics/insideCircle.png" alt="video icon")
       img(src = "/pics/preview.png" class = "image" alt= "Preview")
@@ -11,7 +11,7 @@ mixin contentBlock()
         .line
           i(class = "fas fa-heart")   150
           i(class = "fa fa-clone")  30
-          i(class = "fas fa-clock")  2days ago
+          i(class = "fas fa-clock")  2 days ago
         .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
         button(class = "rightBottomButton")
           i(class = "fas fa-arrow-right")
