--- a/src/footer.scss
+++ b/src/footer.scss
@@ -7,6 +7,7 @@ footer {
 }
 
 .textFooter {
+  display: flex;
   font-family: 'Open Sans', sans-serif;
   margin-top: 11px;
   padding-left: 33px;
@@ -14,6 +15,7 @@ footer {
 }
 
 .leftFooter {
+  margin-top: 20px;
   color: $textColor;
   text-align: left;
 }
@@ -27,6 +29,7 @@ footer {
 }
 .footerButtons i {
   margin-left: 20px;
+  margin-top: 10px;
   background: $textColor;
   border-radius: 50%;
   height: 29px;
