--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -146,14 +146,14 @@
 .leftTh {
   text-align: left;
   color: $textColor;
-  width: 80%;
+  width: 600px;
 }
 
 .rightTh {
   text-align: right;
   color: #6cb9d4;
   font-size: 15px;
-  width: 20%;
+  width: 180px;
 }
 
 .rightTh i {
