--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,8 @@ html(lang="en")
     link(rel="stylesheet" href="/index.scss")
     link(rel="stylesheet", href="../node_modules/@fortawesome/fontawesome-free/css/all.css")
     link(href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet")
+    script
+      include contentSwitch.js
     meta(charset="UTF-8")
   body
     .padding
