--- a/src/contentblock.pug
+++ b/src/contentblock.pug
@@ -6,12 +6,12 @@ mixin contentBlock()
       .videoCircle
         img(src="/pics/insideCircle.png" alt="video icon")
       img(src = "/pics/preview.png" class = "image" alt= "Preview")
-      .description
-        .topTextDesc Ubi est regius zirbus? Ubi est regius zirbus?
-        .line
+      .descriptionList
+        .topTextDescList Ubi est regius zirbus? Ubi est regius zirbus?
+        .lineList
           i(class = "fas fa-heart")   150
           i(class = "fa fa-clone")  30
           i(class = "fas fa-clock")  2 days ago
-        .bottomTextDesc Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
-        button(class = "rightBottomButton")
+        .bottomTextDescList Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix. Fortis lunas ducunt ad genetrix.
+        button(class = "rightBottomButtonList")
           i(class = "fas fa-arrow-right")
