--- a/src/maincolumn.pug
+++ b/src/maincolumn.pug
@@ -32,11 +32,12 @@ mixin mainColumn()
               i(class="fas fa-share-alt")
       .changeView
         .changeViewText Change view :
-        button(class = "changeViewButtonsLeft" onclick = "listView()")
-          i(class ="fas fa-align-justify")
-        button(class = "changeViewButtonsRight" onclick = "gridView()")
-          i(class ="fas fa-th-large")
-      +contentBlock()
-      +contentBlock()
-      +contentBlock()
-      +contentBlock()
+          button(class = "changeViewButtonsLeft" onclick = "listView()")
+            i(class ="fas fa-align-justify")
+          button(class = "changeViewButtonsRight" onclick = "gridView()")
+            i(class ="fas fa-th-large")
+      div(class = "contentList" id = "content")
+        +contentBlock()
+        +contentBlock()
+        +contentBlock()
+        +contentBlock()
