--- a/src/contentBloc.scss
+++ b/src/contentBloc.scss
@@ -7,20 +7,31 @@
   width: 600px;
   height: 210px;
   background: #FFFFFF;
-  margin-bottom: 28px;
+  margin-bottom: 50px;
+}
+
+.secondRectangle {
+  border: red 2px solid;
+  width: 300px;
+  height: 410px;
 }
 
 .image {
   width: 300px;
-  height: 100%;
+  height: 210px;
 }
 
-.description {
+.descriptionList {
   width: 342px;
   height: 210px;
 }
 
-.topTextDesc {
+.descriptionGrid {
+  width: 342px;
+  height: 210px;
+}
+
+.topTextDescList {
   font-family: Sofia Pro Light;
   padding: 8px 13px 10px 16px;
   font-size: 26px;
@@ -29,7 +40,16 @@
   height: 60px;
 }
 
-.line {
+.topTextDescGrid {
+  font-family: Sofia Pro Light;
+  padding: 8px 13px 10px 16px;
+  font-size: 26px;
+  line-height: 30px;
+  width: 314px;
+  height: 60px;
+}
+
+.lineList {
   margin-top: 5px;
   margin-left: 18px;
   margin-right: 18px;
@@ -40,11 +60,22 @@
   height: 20px;
 }
 
-.line i {
+.lineGrid {
+  margin-top: 5px;
+  margin-left: 18px;
+  margin-right: 18px;
+  padding-top: 5px;
+  font-size: 10px;
+  color: $textColor;
+  border-bottom: #7e7d7e 2px solid;
+  height: 20px;
+}
+
+.lineList i {
   margin-right: 20px;
 }
 
-.bottomTextDesc {
+.bottomTextDescList {
   font-family: Sofia Pro Light;
   color: $textColor;
   padding: 13px 13px 10px 18px;
@@ -54,7 +85,30 @@
   height: 60px;
 }
 
-.rightBottomButton {
+.bottomTextDescGrid {
+  font-family: Sofia Pro Light;
+  color: $textColor;
+  padding: 13px 13px 10px 18px;
+  font-size: 13px;
+  line-height: 20px;
+  width: 310px;
+  height: 60px;
+}
+
+.rightBottomButtonList {
+  border: #FFFFFF;
+  background: #dedede;
+  position: absolute;
+  margin-left: 308px;
+  margin-top: -14px;
+  height: 33px;
+  width: 33px;
+  border-top-left-radius: 33px;
+  color: #FFFFFF;
+  text-align: right;
+}
+
+.rightBottomButtonGrid {
   border: #FFFFFF;
   background: #dedede;
   position: absolute;
