--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -82,9 +82,8 @@
 }
 
 .changeView {
-  display: flex;
-  justify-content: right;
-  padding-top: 35px;
+  text-align: right;
+  padding-top: 28px;
   padding-right: 20px;
 }
 
@@ -154,8 +153,20 @@
   color: #6cb9d4;
   font-size: 15px;
   width: 180px;
+  padding-bottom: 7px;
 }
 
 .rightTh i {
   margin-right: 10px;
+}
+
+.contentList {
+}
+
+.contentGrid {
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 20px;
+  justify-content: space-between;
 }
