--- a/src/leftblock.scss
+++ b/src/leftblock.scss
@@ -4,7 +4,9 @@
   padding-top: 15px;
   padding-left: 50px;
   width: 231px;
-  height: 1415px;
+  height: 1590px;
+  box-shadow:  0 0 5px #514d4d;
+  background: white;
 }
 
 .logoImage {
