--- a/src/maincolumn.scss
+++ b/src/maincolumn.scss
@@ -1,7 +1,6 @@
 @import 'index.scss';
 
 .feed {
-  background: #e8e8e8;
   padding-top: 30px;
   padding-left: 23px;
   padding-right: 29px;
@@ -149,6 +148,7 @@
 }
 
 .rightTh {
+  font-family: SegoeUI;
   text-align: right;
   color: #6cb9d4;
   font-size: 15px;
